# VeriDraws

./: .gitignore  README.md  install_deps.bat  package-lock.json  setup_project.ps1  setup_solana.bat
contracts/: setup_rust.ps1
contracts/programs/veridraws/: Cargo.toml
contracts/programs/veridraws/src/: lib.rs
frontend/: fix_deps.ps1  install_deps.ps1  next.config.js  package-lock.json  package.json
frontend/components/: CreateDrawModal.tsx  DrawList.tsx  WalletMultiButtonWrapper.tsx
frontend/config/: index.ts
frontend/contexts/: DrawContext.tsx
frontend/idl/: veridraws.json
frontend/pages/: _app.tsx  index.tsx
frontend/types/: anchor.d.ts  draw.ts
