[package]
name = "veridraws"
version = "0.1.0"
description = "VeriDraws Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-bpf = {}

[dependencies]
solana-program = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.43"
arrayref = "0.3.7"
